--- a/src/main/resources/templates/html/user/user.html
+++ b/src/main/resources/templates/html/user/user.html
@@ -1,54 +1,70 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <meta charset="UTF-8">
-<head lang="en" th:replace="common/header :: header"></head>
+<head lang="en" th:replace="common/header :: header">
+  <meta charset="UTF-8">
+  <title>상대로 프로젝트</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <style>
+    .container {
+      max-width: 100%;
+    }
+  </style>
+</head>
 <body>
 
-<div lang="en" th:replace="common/menu :: menu"></div>
+  <div lang="en" th:replace="common/menu :: menu"></div>
 
-<div id="main" style="margin-left: 15%">
+  <div id="main" style="margin-left: 15%"></div>
 
-<div class="w3-teal">
-  <button id="openNav" style="display: none" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
-  <div class="w3-container">
-    <h1>회원 페이지</h1>
-  </div>
-</div>
+  <div class="container">
+    <button id="openNav" style="display: none" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
+    <div class="py-5 text-center">
+      <h2>유저 관리</h2>
+    </div>
 
-  <a th:href="@{/user/add}">
-    <button>유저추가</button>
-  </a>
-  <hr>
-  <table>
-    <thead>
-    <tr>
-      <th class="ten wide">유저 이름</th>
-      <th class="two wide">닉네임</th>
-      <th class="two wide">유저타입</th>
-    </tr>
-    </thead>
-
-    <tbody>
-    <!-- CONTENTS !-->
-    <tr th:each="userInfo : ${simpleUserList}">
-      <td>
-        <a th:href="@{'/user/add/' + ${userInfo.id}}">
-          <span th:text="${userInfo.name}"></span>
+    <div style="margin-left: 15%">
+      <div>
+        <a th:href="@{/user/add}">
+          <button>유저추가</button>
         </a>
-      </td>
-      <td>
-        <span th:text="${userInfo.nickname}"></span>
-      </td>
-      <td>
-        <span th:if="${userInfo.userType==1}" th:text="관제사"></span>
-        <span th:if="${userInfo.userType==2}" th:text="이용자"></span>
-      </td>
-    </tr>
-    </tbody>
-  </table>
+      </div>
 
-<div lang="en" th:replace="common/footer :: footer"></div>
+      <table class="table">
+        <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">유저 이름</th>
+          <th scope="col">닉네임</th>
+          <th scope="col">유저타입</th>
+        </tr>
+        </thead>
 
-</div>
+        <tbody>
+
+        <tr th:each="userInfo : ${simpleUserList}">
+          <th scope="row">
+            <span th:text="${userInfoStat.index}+1"></span>
+          </th>
+          <td>
+            <a th:href="@{'/user/detail/' + ${userInfo.id}}">
+              <span th:text="${userInfo.name}"></span>
+            </a>
+          </td>
+          <td>
+            <span th:text="${userInfo.nickname}"></span>
+          </td>
+          <td>
+            <span th:if="${userInfo.userType==1}" th:text="관제사"></span>
+            <span th:if="${userInfo.userType==0}" th:text="이용자"></span>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <div lang="en" th:replace="common/footer :: footer"></div>
+
 </body>
 </html>
