--- a/src/main/resources/templates/html/ranking/ranking.html
+++ b/src/main/resources/templates/html/ranking/ranking.html
@@ -23,6 +23,13 @@
       <h2>랭킹</h2>
     </div>
 
+    <!-- TODO 월간, 주간 구현해야 함 -->
+    <div style="margin-left: 15%">
+      <button>누적</button>
+      <button>월간</button>
+      <button>주간</button>
+    </div>
+
     <div style="margin-left: 15%">
       <table class="table">
         <thead>
