--- a/src/main/resources/templates/html/community/detail.html
+++ b/src/main/resources/templates/html/community/detail.html
@@ -11,44 +11,44 @@
 <div class="w3-teal">
   <button id="openNav" style="display: none" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
   <div class="w3-container">
-    <h1>공지 디테일</h1>
+    <h1>커뮤니티 디테일</h1>
   </div>
 </div>
 
 <div id="wrap" style="padding-left:10px;">
 
-	<h2 th:text="'공지사항 ID - ' + ${noticeDto.id}"></h2>
-    <h2 th:text="'공지사항 제목 - ' + ${noticeDto.title}"></h2>
-    <h2 th:text="'작성자 - ' + ${noticeDto.writer}"></h2>
-    <h2 th:text="'조회수 - ' + ${noticeDto.view}"></h2>
-    <h2 th:text="'이미지 - ' + ${noticeDto.topCategory}"></h2>
+	<h2 th:text="'커뮤니티사항 ID - ' + ${communityDto.id}"></h2>
+    <h2 th:text="'커뮤니티사항 제목 - ' + ${communityDto.title}"></h2>
+    <h2 th:text="'작성자 - ' + ${communityDto.writer}"></h2>
+    <h2 th:text="'조회수 - ' + ${communityDto.view}"></h2>
+    <h2 th:text="'이미지 - ' + ${communityDto.topCategory}"></h2>
     <h2 th:text="'카테고리 - ' + ${category}"></h2>
-    <p th:inline="text">작성일 : [[${#temporals.format(noticeDto.modifiedDate, 'yyyy-MM-dd HH:mm')}]]</p>
+    <p th:inline="text">작성일 : [[${#temporals.format(communityDto.modifiedDate, 'yyyy-MM-dd HH:mm')}]]</p>
 
-    <p th:text="${noticeDto.content}"></p>
+    <p th:text="${communityDto.content}"></p>
 
     <!-- 수정/삭제 -->
     <div>
-        <a th:href="@{'/notice/post/edit/' + ${noticeDto.id}}">
+        <a th:href="@{'/community/post/edit/' + ${communityDto.id}}">
             <button>수정</button>
         </a>
 
-        <form id="delete-form" th:action="@{'/notice/post/' + ${noticeDto.id}}" method="post">
+        <form id="delete-form" th:action="@{'/community/post/' + ${communityDto.id}}" method="post">
             <input type="hidden" name="_method" value="delete"/>
             <button id="delete-btn">삭제</button>
         </form>
         
-        <a th:href="@{'/notice/?category=' + ${noticeDto.categoryId}}">
+        <a th:href="@{'/community/?category=' + ${communityDto.categoryId}}">
             <button>목록</button>
         </a>
     </div>
 
     <script th:inline="javascript">
         /*<![CDATA[*/
-        var noticeDto = /*[[${noticeDto}]]*/ "";
+        var communityDto = /*[[${communityDto}]]*/ "";
         /*]]>*/
     </script>
-    <script th:inline="javascript" th:src="@{/js/notice.js}"></script>
+    <script th:inline="javascript" th:src="@{/js/community.js}"></script>
     
     
 </div>
