--- a/src/main/resources/templates/html/community/write.html
+++ b/src/main/resources/templates/html/community/write.html
@@ -11,26 +11,26 @@
 <div class="w3-teal">
   <button id="openNav" style="display: none" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
   <div class="w3-container">
-    <h1>공지 쓰기</h1>
+    <h1>커뮤니티 쓰기</h1>
   </div>
 </div>
 
-    <form action="/notice/post" method="post">
+    <form action="/community/post" method="post">
     	제목 : <input type="text" name="title" maxlength="10"> <br>
     	작성자 : <input type="text" name="writer"> <br>
     	<input type="hidden" value="0" name="view">
-    	<input type="hidden" value="1" name="topCategory">
+    	<input type="hidden" value="2" name="topCategory">
         Sub: 
         <select name="categoryId">
-        	<option type="number" value="1">전체</option>
-        	<option type="number" value="2">자원봉사자</option>
-        	<option type="number" value="3">이용자</option>
+        	<option th:each="categoryOption : ${categoryDto}"
+        			th:text="${categoryOption.memo}"
+        			th:value="${categoryOption.id}"/>
         </select><br>
         
         <textarea name="content"></textarea><br>
 
         <input type="submit" value="등록">
-        <a th:href="@{/notice}">목록</a>
+        <a th:href="@{/community}">목록</a>
     </form>
     
     <div lang="en" th:replace="common/footer :: footer"></div>
