--- a/src/main/resources/templates/html/notice/update.html
+++ b/src/main/resources/templates/html/notice/update.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <head lang="en" th:replace="common/header :: header"></head>
 <body>
-
+<script src="https://cdn.ckeditor.com/ckeditor5/12.4.0/classic/ckeditor.js"></script>
 <div lang="en" th:replace="common/menu :: menu"></div>
 
 <div id="main" style="margin-left: 15%">
@@ -25,13 +25,16 @@
 	    <input type="hidden" value="1" name="topCategory">
 	    Sub: 
         <select name="categoryId">
-        	<option type="number" value="1">전체</option>
-        	<option type="number" value="2">자원봉사자</option>
-        	<option type="number" value="3">이용자</option>
+        	<option th:each="category : ${categoryDto}"
+        			th:text="${category.memo}"
+        			th:value="${category.id}"
+        			th:selected="${category.id} == ${noticeDto.categoryId}"/> 
+        	<option value="-1" th:selected="-1 == ${noticeDto.categoryId}">삭제</option>
         </select><br> 
         
-    
-        <textarea name="content" th:text="${noticeDto.content}"></textarea><br>
+        <div class="editor_wrap">
+		   <textarea name="content" id="content" th:text="${noticeDto.content}"></textarea>
+		</div><br>
 
         <input type="submit" value="수정">
         <a th:href="@{/notice}">목록</a>
@@ -39,6 +42,13 @@
     <div lang="en" th:replace="common/footer :: footer"></div>
 
 </div>
-
+	<!-- CKEditor -->
+	<script type="text/javascript">
+		ClassicEditor
+		    .create( document.querySelector( '#content' ) )
+		    .catch( error => {
+		        console.error( error );
+		    } );
+	</script>
 </body>
 </html>
