--- a/src/main/resources/templates/html/category/categoryDetail.html
+++ b/src/main/resources/templates/html/category/categoryDetail.html
@@ -22,20 +22,20 @@
     <h2 th:text="'카테고리 상태 - ' + ${categoryDto.status}"></h2>
     <h2 th:text="'Top - ' + ${categoryDto.topCategory}"></h2>
     <h2 th:text="'관리자 - ' + ${categoryDto.communityManager}"></h2>
-    <p th:inline="text">작성일 : [[${#temporals.format(categoryDto.modifiedDate, 'yyyy-MM-dd HH:mm')}]]</p>
+    <p th:inline="text">작성일 : [[${#temporals.format(categoryDto.modDate, 'yyyy-MM-dd HH:mm')}]]</p>
 
     <!-- 수정/삭제 -->
     <div>
-        <a th:href="@{'/community/category/edit/' + ${categoryDto.id}}">
+        <a th:href="@{'/'+${path}+'/category/edit/' + ${categoryDto.id}}">
             <button>수정</button>
         </a>
 
-        <form id="delete-form" th:action="@{'/community/category/delete/' + ${categoryDto.id}}" method="post">
+        <form id="delete-form" th:action="@{'/'+${path}+'/category/delete/' + ${categoryDto.id}}" method="post">
             <input type="hidden" name="_method" value="delete"/>
             <button id="delete-btn">삭제</button>
         </form>
         
-        <a th:href="@{'/community/category?category=' + ${categoryDto.topCategory}}">
+        <a th:href="@{'/'+${path}+'/category?topCategory=' + ${categoryDto.topCategory}}">
             <button>목록</button>
         </a>
     </div>
