--- a/src/main/resources/templates/html/notice/write.html
+++ b/src/main/resources/templates/html/notice/write.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <head lang="en" th:replace="common/header :: header"></head>
 <body>
-
+<script src="https://cdn.ckeditor.com/ckeditor5/12.4.0/classic/ckeditor.js"></script>
 <div lang="en" th:replace="common/menu :: menu"></div>
 
 <div id="main" style="margin-left: 15%">
@@ -22,12 +22,14 @@
     	<input type="hidden" value="1" name="topCategory">
         Sub: 
         <select name="categoryId">
-        	<option type="number" value="1">전체</option>
-        	<option type="number" value="2">자원봉사자</option>
-        	<option type="number" value="3">이용자</option>
+        	<option th:each="categoryOption : ${categoryDto}"
+        			th:text="${categoryOption.memo}"
+        			th:value="${categoryOption.id}"/>
         </select><br>
         
-        <textarea name="content"></textarea><br>
+        <div class="editor_wrap">
+		   <textarea name="content" id="content"></textarea>
+		</div><br>
 
         <input type="submit" value="등록">
         <a th:href="@{/notice}">목록</a>
@@ -36,6 +38,13 @@
     <div lang="en" th:replace="common/footer :: footer"></div>
 
 </div>
-
+	<!-- CKEditor -->
+	<script type="text/javascript">
+		ClassicEditor
+		    .create( document.querySelector( '#content' ) )
+		    .catch( error => {
+		        console.error( error );
+		    } );
+	</script>
 </body>
 </html>
