--- a/src/main/resources/templates/html/ranking/ranking.html
+++ b/src/main/resources/templates/html/ranking/ranking.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <meta charset="UTF-8">
@@ -25,10 +24,16 @@
     </div>
 
     <!-- TODO 월간, 주간 구현해야 함 -->
-    <div style="margin-left: 15%">
-      <button>누적</button>
-      <button>월간</button>
-      <button>주간</button>
+    <div class="row" style="margin-left: 15%">
+      <li>
+        <a th:href="'?scope=1'">전체</a>
+      </li>
+      <li>
+        <a th:href="'?scope=2'">월간</a>
+      </li>
+      <li>
+        <a th:href="'?scope=3'">주간</a>
+      </li>
     </div>
 
     <div style="margin-left: 15%">
@@ -60,67 +65,5 @@
   <div lang="en" th:replace="common/footer :: footer"></div>
 
 </body>
-=======
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<meta charset="UTF-8">
-<head lang="en" th:replace="common/header :: header">
-  <meta charset="UTF-8">
-  <title>상대로 프로젝트</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <style>
-    .container {
-      max-width: 100%;
-    }
-  </style>
-</head>
-<body>
 
-  <div lang="en" th:replace="common/menu :: menu"></div>
-
-  <div id="main" style="margin-left: 15%"></div>
-
-  <div class="container">
-    <button id="openNav" style="display: none" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
-    <div class="py-5 text-center">
-      <h2>랭킹</h2>
-    </div>
-
-    <!-- TODO 월간, 주간 구현해야 함 -->
-    <div style="margin-left: 15%">
-      <button>누적</button>
-      <button>월간</button>
-      <button>주간</button>
-    </div>
-
-    <div style="margin-left: 15%">
-      <table class="table">
-        <thead>
-        <tr>
-          <th scope="col">등수</th>
-          <th scope="col">유저 이름</th>
-        </tr>
-        </thead>
-
-        <tbody>
-        <tr th:each="userInfo : ${userRanking}">
-          <th scope="row">
-            <span th:text="${userInfoStat.index}+1"></span>
-          </th>
-          <td>
-            <a th:href="@{'/user/detail/' + ${userInfo.id}}">
-              <span th:text="${userInfo.name}"></span>
-            </a>
-            <span th:text="'(' + ${userInfo.volunteerTime} + ' 시간)'"></span>
-          </td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-
-  <div lang="en" th:replace="common/footer :: footer"></div>
-
-</body>
->>>>>>> 030b67ec99602768d76a4ae85e5ce9142cf65f0b
 </html>
