--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -7,13 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=6e4jn9c1iy"></script>
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=6e4jn9c1iy&submodules=geocoder"></script>
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-   <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-   <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
-   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/node_modules/bootstrap-toggle/css/bootstrap-toggle.min.css"/>
+    <link rel="stylesheet" href="/node_modules/w3-css/w3.css">
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/node_modules/popper.js/dist/popper.min.js"></script>
+    <script src="/node_modules/js-cookie/src/js.cookie.js"></script>
+    <script src="/node_modules/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
+
+
 	<style th:inline="text">
    #sidebarCollapse {
     width: 40px;
@@ -34,7 +38,63 @@ function w3_open() {
 	  document.getElementById("mySidebar").style.display = "none";
 	  document.getElementById("openNav").style.display = "inline-block";
 	}
+	
+	var logout = function() {
+	    $.post("/logout", function() {
+	        $("#user").html('');
+	        $(".unauthenticated").show();
+	        $(".authenticated").hide();
+	    })
+	    return true;
+	}
+	
+	$.get("/userdata/getBasicInfo", function(data) {
+		if(typeof data.name != "undefined"){
+			$("#user").html(data.name);
+	        $(".unauthenticated").hide();
+	        $(".authenticated").show();
+	        
+	        if(data.userType != 1){
+	        	$('a.menu').hide();
+	        	
+	        	if(window.location.pathname != "/"){
+	        		window.location.replace("/");	
+	        	}
+	        	
+	        }
+	        
+	        if(data.status == 0){
+	        	$('#toggle-event').bootstrapToggle('off');
+	        }
+	        
+	        
+		}
+		else{
+			logout();
+		}
+    });
+	
+	$( document ).ready(function() {
+		$.ajaxSetup({
+			  beforeSend : function(xhr, settings) {
+			    if (settings.type == 'POST' || settings.type == 'PUT'
+			        || settings.type == 'DELETE') {
+			      if (!(/^http:.*/.test(settings.url) || /^https:.*/
+			        .test(settings.url))) {
+			        // Only send the token to relative URLs i.e. locally.
+			        xhr.setRequestHeader("X-XSRF-TOKEN",
+			          Cookies.get('XSRF-TOKEN'));
+			      }
+			    }
+			  }
+			});
+		
+		    $('#toggle-event').change(function() {
+		    	$.post("/userdata/setStatus", {isOn: $(this).prop('checked')}, function(data) {
+		    		console.log(data);
+		        });
+		    }) 
+	});
 	</script>
-	<script th:src="@{/ckeditor/ckeditor.js}"></script>
 </head>
 </html>
