--- a/src/main/resources/templates/html/request/requestDetail.html
+++ b/src/main/resources/templates/html/request/requestDetail.html
@@ -12,7 +12,7 @@
 			<button id="openNav" style="display: none"
 				class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
 			<div class="w3-container">
-				<h1>요청 상세 페이지</h1>
+				<h1>활동 상세 페이지</h1>
 			</div>
 		</div>
 		<div class="w3-container"></div>
@@ -23,25 +23,34 @@
 	
 		카테고리 :
 		<p th:text="${requestDto.interestCategory.name}"></p>
-		이용자:
-		<p th:text="${requestDto.userName}"></p>
-		<p th:text="${requestDto.userTaker.phone}"></p>
+		이용자 :
+		<table>
+    		<tr>
+        		<th>이름</th>
+        		<th>전화번호</th>
+    		</tr>
+    		<tr th:each="user : ${requestDto.users}">
+        		<td th:text="${user.name}"></td>
+        		<td th:text="${user.phone}"></td>
+    		</tr>
+		</table>
+		<br><br>
 		봉사자 :
 		<table>
-    <tr>
-        <th>이름</th>
-        <th>전화번호</th>
-    </tr>
-    <tr th:each="volunteer : ${requestDto.volunteers}">
-        <td th:text="${volunteer.userId.name}"></td>
-        <td th:text="${volunteer.userId.phone}"></td>
-    </tr>
-</table>
-		<p></p>
+    		<tr>
+        		<th>이름</th>
+        		<th>전화번호</th>
+    		</tr>
+    		<tr th:each="volunteer : ${requestDto.volunteers}">
+        		<td th:text="${volunteer.name}"></td>
+        		<td th:text="${volunteer.phone}"></td>
+    		</tr>
+		</table>
+		<br><br>
 		
 		봉사시간/장소:
-		<p>[[${#temporals.format(requestDto.startTime, 'yyyy-MM-dd HH:mm')}]] ~ [[${#temporals.format(requestDto.endTime, 'yyyy-MM-dd HH:mm')}]]</p>
-		
+		<br>[[${#temporals.format(requestDto.startTime, 'yyyy-MM-dd HH:mm')}]] ~ [[${#temporals.format(requestDto.endTime, 'yyyy-MM-dd HH:mm')}]]
+		<br th:text="${requestDto.place}"></br>
 		관리자: 
 		<p th:text="${requestDto.manager}"></p>
 		세부내용:
