sixth join-activity

--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -12,12 +12,13 @@
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/node_modules/bootstrap-toggle/css/bootstrap-toggle.min.css"/>
     <link rel="stylesheet" href="/node_modules/w3-css/w3.css">
+    <link rel="stylesheet" href="/node_modules/@fancyapps/fancybox/dist/jquery.fancybox.min.css" >
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/node_modules/js-cookie/src/js.cookie.js"></script>
     <script src="/node_modules/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
-
+	<script src="/node_modules/@fancyapps/fancybox/dist/jquery.fancybox.min.js"></script>
 
 	<style th:inline="text">
    #sidebarCollapse {
