--- a/src/main/resources/templates/common/menu.html
+++ b/src/main/resources/templates/common/menu.html
@@ -21,7 +21,7 @@
         <button class="w3-bar-item w3-button w3-large"
                 onclick="w3_close()">Close &times;</button>
         <a th:href="@{/activity}" class="w3-bar-item w3-button w3-border-bottom menu">활동 관리</a>
-        <a th:href="@{/request}" class="w3-bar-item w3-button w3-border-bottom menu">요청 관리</a>
+        <a th:href="@{/request}" class="w3-bar-item w3-button w3-border-bottom menu">앱에서 들어온 요청</a>
         <a th:href="@{/community}" class="w3-bar-item w3-button w3-border-bottom menu">커뮤니티 관리</a>
         <a th:href="@{/user}" class="w3-bar-item w3-button w3-border-bottom menu">회원 관리</a>
         <a th:href="@{/interest}" class="w3-bar-item w3-button w3-border-bottom menu">관심사 관리</a>
