--- a/src/main/resources/templates/html/activity/activityForm.html
+++ b/src/main/resources/templates/html/activity/activityForm.html
@@ -53,7 +53,7 @@
 					<div class="col-md-4">
 							이용자:
 							<input id="searchUsers" type="text" placeholder="유저 이름으로 검색">
-							<ul id="users">
+							<ul id="users" style="list-style-type: none;">
 
 							</ul>
 							<div id="pagingUsers">
@@ -63,7 +63,7 @@
 					<div class="col-md-4">
 						봉사자:
 						<input id="searchVolunteers" type="text" placeholder="유저 이름으로 검색">
-						<ul id="volunteers">
+						<ul id="volunteers" style="list-style-type: none;">
 
 						</ul>
 						<div id="pagingVolunteers">
@@ -77,6 +77,12 @@
 								<option th:each="manager : ${managers}" th:value="${manager.id}"
 									th:text="${manager.name}"></option>
 							</select>
+						<div class="row">
+							<ul id="clickedUsers" class="list-group mt-2 col-md-6">
+							</ul>
+							<ul id="clickedVolunteers" class="list-group mt-2 col-md-6">
+							</ul>
+						</div>
 					</div>
 				</div>
 				<hr>
@@ -99,7 +105,20 @@
 					상세 설명:
 					<textarea name="content"></textarea>
 				</div>
-				<div class="row">
+				<hr>
+				<div class="row deliveryGroup" style="display: none;">
+					<h4>나눔 내용</h4>
+				</div>
+				<div class="row deliveryGroup" style="display: none;">
+					<div class="col-md-6">
+						<input type="radio" id="direct" name="delivery" value="0" checked>
+						<label for="direct">직접 수령</label> 
+						<input type="radio" id="through" name="delivery" value="1">
+						<label for="through">봉사사 통해 전달</label>
+					</div>
+					<div class="col-md-6">
+						<input type="file" name="files" multiple>
+					</div>
 <!--					<input type="radio" id="direct" name="delivery" value="0" checked>-->
 <!--					<label for="direct">직접 수령</label> <input type="radio" id="through"-->
 <!--															 name="delivery" value="1"> <label for="through">봉사사-->
@@ -137,6 +156,50 @@
 					}
 				}).open();
 			}
+			
+			function fancyClickUsers(){
+				try{
+					var innerHtml = (clickedUsers.length>0)?"이용자:":"";
+					if(userStatusList.length > 0){
+						userStatusList.forEach(function(user){
+							if(clickedUsers.indexOf(user.id.toString()) > -1){
+								innerHtml += " <li class='list-group-item list-group-item-success'>"+ user.name + "<br>" + user.phone +"</li>";	
+							}
+						});
+					}
+					
+				}
+				finally{
+					$('#clickedUsers').html(innerHtml);
+				}
+			}
+			
+			function fancyClickVolunteers(){
+				try{
+					var innerHtml = (clickedVolunteers.length>0)?"봉사자:":"";
+					var color="";
+					if(userStatusList.length > 0){
+						userStatusList.forEach(function(user){
+							if(clickedVolunteers.indexOf(user.id.toString()) > -1){
+								if($('#volunteer'+ user.id).val() == 0){
+									color = "warning";	
+								}
+								else if($('#volunteer'+ user.id).val() == 1){
+									color = "success";
+								}
+								else{
+									color = "danger";
+								}
+								innerHtml += " <li class='list-group-item list-group-item-" + color + "'>"+ user.name + "<br>" + user.phone +"</li>";	
+							}
+						});
+					}
+					
+				}
+				finally{
+					$('#clickedVolunteers').html(innerHtml);
+				}
+			}
 		
 			
 			function addEventListenersToUsers(){
@@ -148,32 +211,35 @@
 					
 					if(clickedUsers.indexOf($(this).val()) > -1){
 						$(this).prop('checked', true);
-						$('#user'+ $(this).val()).toggle();
-						$(this).next().next().attr("name","userStatus");
+						//$('#user'+ $(this).val()).toggle();
+						//$(this).next().next().attr("name","userStatus");
 	    			}
 					
 					$(this).click(function(){
 						$('#volunteers li input[value="'+ $(this).val() +'"]').prop('disabled', function(i, v) { return !v; });
-						$('#user'+ $(this).val()).toggle();
+						//$('#user'+ $(this).val()).toggle();
 						
 						if($(this).prop('checked')){
 			    			if(clickedUsers.indexOf($(this).val()) == -1){
 			    				clickedUsers.push($(this).val());
 			    			}
-			    			$(this).next().next().attr("name","userStatus");
+			    			//$(this).next().next().attr("name","userStatus");
 						}
 						else{
 							if(clickedUsers.indexOf($(this).val()) > -1){
 			    				clickedUsers.splice(clickedUsers.indexOf($(this).val()), 1);
 			    			}
-							$(this).next().next().removeAttr("name");
+							//$(this).next().next().removeAttr("name");
 						}
+						
+						fancyClickUsers();
+						
 						
 					})
 					
 				})	
 				
-				$('input[name="userId"]+label+select').each(function(){
+				/*$('input[name="userId"]+label+select').each(function(){
 					$(this).change(function(){
 						
 						for(var i = 0; i < users.length ; i++){
@@ -184,7 +250,7 @@
 						}
 						
 					});
-				});
+				});*/
 			}
 			
 			function addEventListenersToVolunteers(){
@@ -218,6 +284,8 @@
 							$(this).next().next().removeAttr("name");
 						}
 						
+						fancyClickVolunteers();
+						
 					})
 					
 				})
@@ -231,7 +299,7 @@
 								break;
 							}
 						}
-						
+						fancyClickVolunteers();
 					});
 				});
 				
@@ -255,13 +323,13 @@
 								}
 								
 								if(clickedVolunteers.indexOf(users[i].id.toString()) > -1){
-									innerHtml += " disabled> <label for='"+ users[i].id +"'>"+ users[i].name +"</label>";
+									innerHtml += " disabled> <label for='"+ users[i].id +"'>"+ users[i].name +"</label></li>";
 								}
 								else{
-									innerHtml += "> <label for='"+ users[i].id +"'>"+ users[i].name +"</label>";
+									innerHtml += "> <label for='"+ users[i].id +"'>"+ users[i].name +"</label></li>";
 								}
 								
-								if(users[i].status==null || users[i].status == 0){
+								/*if(users[i].status==null || users[i].status == 0){
 									innerHtml += "<select style='display: none;' id='user"+ users[i].id +"'><option value='0' selected>대기</option><option value='1'>승인</option><option value='2'>거절</option></select></li>";
 								}
 								else if(users[i].status == 1){
@@ -269,7 +337,7 @@
 								}
 								else{
 									innerHtml += "<select style='display: none;' id='user"+ users[i].id +"'><option value='0'>대기</option><option value='1'>승인</option><option value='2' selected>거절</option></select></li>";
-								}
+								}*/
 								
 							}
 							
@@ -472,14 +540,14 @@
 							}
 							
 							if(clickedVolunteers.indexOf(item.id.toString()) > -1){
-								innerHtml += " disabled> <label for='"+ item.id +"'>"+ item.name +"</label>";
+								innerHtml += " disabled> <label for='"+ item.id +"'>"+ item.name +"</label></li>";
 							}
 							else{
-								innerHtml += "> <label for='"+ item.id +"'>"+ item.name +"</label>";
+								innerHtml += "> <label for='"+ item.id +"'>"+ item.name +"</label></li>";
 							}
 
 							
-							if(item.status==null || item.status == 0){
+							/*if(item.status==null || item.status == 0){
 								innerHtml += "<select style='display: none;' id='user"+ item.id +"'><option value='0' selected>대기</option><option value='1'>승인</option><option value='2'>거절</option></select></li>";
 							}
 							else if(item.status == 1){
@@ -487,7 +555,7 @@
 							}
 							else{
 								innerHtml += "<select style='display: none;' id='user"+ item.id +"'><option value='0'>대기</option><option value='1'>승인</option><option value='2' selected>거절</option></select></li>";
-							}
+							}*/
 							
 							count++;
 							
@@ -594,24 +662,74 @@
 				
 			}
 			
-			$.get("/activitydata/getUsers", {id: null}, function(data) {
-				
-				userStatusList = data;
-				
-				if(permittedVolunteer != null){
-					clickedVolunteers.push(permittedVolunteer.id.toString());
-					for(var i = 0; i < userStatusList.length ; i++){
-						if(userStatusList[i].id == permittedVolunteer.id){
-							userStatusList[i].status = 1;
-							break;
+			function getUsers(isSearch, category){
+				$.get("/activitydata/getUsers", {id: null, category: category}, function(data) {
+					
+					userStatusList = data;
+					
+					if(isSearch){
+						
+						var userIdList = [];
+						
+						try{
+							
+							if(userStatusList!=null && userStatusList.length > 0){
+								userStatusList.forEach(function(user){
+									userIdList.push(user.id.toString());
+								});
+							}
+							
+						}
+						finally{
+							
+							for(var i = clickedUsers.length -1; i >= 0 ; i--){
+							    if(userIdList.indexOf(clickedUsers[i]) == -1){
+							        clickedUsers.splice(i, 1);
+							    }
+							}
+							
+							for(var i = clickedVolunteers.length -1; i >= 0 ; i--){
+							    if(userIdList.indexOf(clickedVolunteers[i]) == -1){
+							        clickedVolunteers.splice(i, 1);
+							    }
+							}	
+							
 						}
 					}
+					else{
+						if(permittedVolunteer != null){
+							clickedVolunteers.push(permittedVolunteer.id.toString());
+							for(var i = 0; i < userStatusList.length ; i++){
+								if(userStatusList[i].id == permittedVolunteer.id){
+									userStatusList[i].status = 1;
+									break;
+								}
+							}
+						}
+					}
+					
+					searchUsers("");
+					searchVolunteers("");
+					
+					fancyClickUsers();
+					fancyClickVolunteers();
+					
+				});
+			}
+			
+			getUsers(false, $('select[name="interestCategoryId"]').val());
+			
+			$('select[name="interestCategoryId"]').on('change', function() {
+				
+				getUsers(true, $('select[name="interestCategoryId"]').val());
+				
+				if($('select[name="interestCategoryId"] option:selected').html().toString().includes("물건")){
+					$('.deliveryGroup').show();
 				}
-				
-				searchUsers("");
-				
-				searchVolunteers("");
-				
+				else{
+					$('.deliveryGroup').hide();
+				}
+				 
 			});
 			
 			
