--- a/src/main/resources/templates/html/request/request.html
+++ b/src/main/resources/templates/html/request/request.html
@@ -8,62 +8,64 @@
 
 	<div id="main" style="margin-left: 15%">
 
-		<div class="w3-teal">
+		<div class="w3-container">
 			<button id="openNav" style="display: none"
-				class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
+					class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
 			<div class="w3-container">
 				<h1>앱에서 들어온 요청</h1>
 			</div>
-		</div>
-
-		<div class="w3-container">
 
 			<form action="/request" method="GET">
-				<div class="search">
-					<input name="keyword" type="text" placeholder="제목으로 검색"
-						th:value="${keyword}">
-					<button>검색하기</button>
+				<div class="row">
+					<div class="col-md-8">
+						카테고리:
+						<select onchange="this.form.submit()" name="interestType">
+							<option value="0">관심사를 선택하세요</option>
+							<option th:selected="${interestType==interest.id}"
+									th:each="interest : ${interests}" th:value="${interest.id}"
+									th:text="${interest.name}"></option>
+						</select>
+						<select onchange="this.form.submit()" name="sort">
+							<option th:selected="${sort==1}" value="1">최신순</option>
+							<option th:selected="${sort==2}" value="2">오래된순</option>
+						</select>
+					</div>
+					<div class="search col-md-4">
+						<input name="keyword" type="text" placeholder="제목으로 검색"
+							   th:value="${keyword}">
+						<button>검색하기</button>
+					</div>
 				</div>
-				카테고리: <select onchange="this.form.submit()" name="interestType">
-					<option value="0">관심사를 선택하세요</option>
-					<option th:selected="${interestType==interest.id}"
-						th:each="interest : ${interests}" th:value="${interest.id}"
-						th:text="${interest.name}"></option>
-				</select> 
-				<select onchange="this.form.submit()" name="sort">
-					<option th:selected="${sort==1}" value="1">최신순</option>
-					<option th:selected="${sort==2}" value="2">오래된순</option>
-				</select>
 			</form>
 
 			<!-- payment list  -->
 			<form action="/request" method="GET">
 				<!-- update checked record's 'paymentCheck' status. -->
 
-				<table>
+				<table class="table">
 					<thead>
 						<tr>
-							<th>id(번호)</th>
-							<th>제목</th>
-							<th>카테고리</th>
-							<th>신청자</th>
-							<th>요청 날짜</th>
-							<th>상태</th>
+							<th scope="col">id(번호)</th>
+							<th scope="col">제목</th>
+							<th scope="col">카테고리</th>
+							<th scope="col">신청자</th>
+							<th scope="col">요청 날짜</th>
+							<th scope="col">상태</th>
 						</tr>
 					</thead>
 
 					<tbody>
 
-						<!-- CONTENTS !-->
+						<!-- CONTENTS -->
 						<tr th:each="request : ${requestList}">
 							<td><span th:text="${request.id}"></span></td>
 							<td><span th:text="${request.title}"></span></td>
 							<td><span th:if="${request.interestCategory}"
 								th:text="${request.interestCategory.name}"></span> <span
-								th:if="${request.interestCategory==null}">-----</span></td>
+								th:if="${request.interestCategory==null}">——</span></td>
 							<td><span th:if="${request.client}"
 								th:text="${request.client.name}"></span> <span
-								th:if="${request.client==null}">-----</span></td>
+								th:if="${request.client==null}">——</span></td>
 							<td><span
 								th:text="${#temporals.format(request.regDate, 'yyyy-MM-dd HH:mm')}"></span>
 							</td>
@@ -79,7 +81,7 @@
 				</table>
 			</form>
 
-			<!-- paging -->
+			<!--  paging -->
 			<div>
 				<span th:each="pageNum : ${pageList}" th:inline="text"> <a
 					th:href="@{'/request?page=' + ${pageNum} + '&keyword=' + ${keyword} + '&interestType=' + ${interestType}}">[[${pageNum}]]</a>
